Explore more Lazy usage bug visibility

--- a/_scss/layout/_colapsible.scss
+++ b/_scss/layout/_colapsible.scss
@@ -557,6 +557,7 @@ body {
         max-width: 300px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 35px;
 
     &:hover,
     &:active {
